<resources>
    <string name="app_name">Telugu Calendar</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-8009469144357385/5889767065</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="January_2022">01  ఆంగ్ల సంవత్సరాది  \n01  మాస శివరాత్రి  \n02  వరల్డ్ నేచర్ డే  \n02  అమావాస్య  \n03  సోమవారం వృతం  \n03  చంద్రోదయం  \n06  ఎపిఫని  \n06  చతుర్థి వ్రతం  \n08  స్కంద షష్టి  \n10  దుర్గాష్టమి వ్రతం  \n11  ఉత్తరాషాఢ కార్తె  \n12  నేషనల్ యూత్ డే  \n12  స్వామి వివేకానంద జయంతి  \n13  పుష్య పుత్రాద ఏకాదశి  \n13  ముక్కోటి ఏకాదశి  \n13  భోగి  \n14  పొంగల్  \n14  మకర సంక్రాంతి  \n14  ఉత్తరాయణ పుణ్యకాలం ప్రారంభం  \n15  శనిత్రయోదశి  \n15  ప్రదోష వ్రతం  \n16  కనుము  \n16  బొమ్మలనోము  \n16  ముక్కనుము  \n17  పౌర్ణమి  \n17  పౌర్ణమి వ్రతం  \n17  శ్రీ సత్యనారాయణ పూజ  \n21  సంకటహర చతుర్థి  \n22  త్యాగరాజ స్వామి ఆరాధన  \n23  నేతాజీ జయంతి  \n24  శ్రావణ కార్తె  \n25  భాను సప్తమి  \n26  రిపబ్లిక్ డే  \n28  లాలా లజపతిరాయ్ జయంతి  \n28  షట్టిల ఏకాదశి  \n29  ప్రదోష వ్రతం  \n29  శనిత్రయోదశి  \n30  మహాత్మాగాంధీ వర్ధంతి  \n30  మాస శివరాత్రి  \n31  అవతార్ మిహిర్ బాబా అమరతిథి  </string>
    <string name="February_2022">01  చొల్లంగి అమావాస్య  \n01  అమావాస్య  \n02  చంద్రోదయం  \n03  శ్రీ మార్కండేయ మహర్షి జయంతి  \n04  చతుర్థి వ్రతం  \n04 గణేష్‌ జయంతి  \n05  సరస్వతి పూజ  \n06  స్కంద షష్టి  \n06  ధనిష్ఠ కార్తె  \n07  రధసప్తమి  \n07  సోమవారం వృతం  \n08  భీష్మాష్టమి  \n08  దుర్గాష్టమి వ్రతం  \n10  మధ్వ నవమి  \n12  జయ ఏకాదశి  \n13  కుంభ సంక్రమణం  \n14  వాలెంటైన్స్ డే  \n14  ప్రదోష వ్రతం  \n15  హాజరతే అలీ జయంతి  \n16  మాఘపూర్ణిమ  \n16  పౌర్ణమి  \n16  పౌర్ణమి వ్రతం  \n16  శ్రీ సత్యనారాయణ పూజ  \n16  సింధుస్నానం  \n19  శతభిష కార్తె  \n20  సంకటహర చతుర్థి  \n23  బుద్ధ అష్టమి  \n25  మెహర్ బాబా జయంతి  \n26  స్వామి దయానంద సరస్వతి జయంతి  \n28  నేషనల్ సైన్స్ డే  \n28  ప్రదోష వ్రతం  \n28  సోమా ప్రదోష వ్రతం </string>
    <string name="March_2022">01  షబ్-ఎ-మేరాజ్  \n01  మహాశివరాత్రి  \n01  మాస శివరాత్రి  \n02  అమావాస్య  \n03  మాఘ గుప్త నవరాత్రి  \n03  చంద్రోదయం  \n04  పూర్వాభాద్ర కార్తె  \n04  యాదాద్రి శ్రీలక్ష్మి నరసింహస్వామివారి బ్రహ్మౌత్సువాలు ప్రారంభం  \n06  చతుర్థి వ్రతం  \n07  సోమవారం వృతం  \n08  స్కంద షష్టి  \n10  దుర్గాష్టమి వ్రతం  \n11  యాదాద్రి శ్రీలక్ష్మి నరసింహస్వామివారి బ్రహ్మౌత్సువాలు తిరుకళ్యాణం  \n14  కోరుకొండ తీర్థం  \n14  తిరుమల శ్రీవారి తెప్పోత్సవం ప్రారంభం  \n15  ప్రదోష వ్రతం  \n15  మీన సంక్రమణం  \n16  పొట్టి శ్రీరాములు జయంతి  \n17  హోలిక దహన్  \n17  పౌర్ణమి వ్రతం  \n17  శ్రీ సత్యనారాయణ పూజ  \n18  శ్రీలక్ష్మి జయంతి  \n18  ఉత్తరాభాద్ర కార్తె  \n18  తిరుమల శ్రీవారి తెప్పోత్సవం సమాప్తి  \n18  పౌర్ణమి  \n18  హోలీ పండుగ  \n18  షబ్-ఎ-బరాత్  \n21  సంకటహర చతుర్థి  \n22  రంగ పంచమి  \n24  శీతల సప్తమి  \n28  పాపమోచనీ ఏకాదశి  \n29  ప్రదోష వ్రతం  \n30  మాస శివరాత్రి  \n31  రేవతి కార్తె </string>
    <string name="Aprial_2022">01  ఏప్రిల్ ఫూల్  \n01  అమావాస్య  \n02  శ్రీ శుభకృతు నామ సంవత్సర ఉగాది   \n02  చంద్రోదయం  \n03  రంజాన్ నెల ప్రారంభం  \n04  సోమవారం వృతం  \n04  మత్స్య జయంతి  \n05  బాబూ జగజ్జీవన్ రామ్ జయంతి  \n05  చతుర్థి వ్రతం  \n05  వసంత పంచమి  \n07  స్కంద షష్టి  \n07  వరల్డ్ హెల్త్ డే  \n09  దుర్గాష్టమి వ్రతం  \n10  తాటాకు ఆదివారం  \n10  శ్రీరామ నవమి  \n11  జ్యోతిరావుఫూలే జయంతి  \n11 ధర్మరాజు దశమి  \n12  కామద ఏకాదశి  \n13  వైష్ణవ కామద ఏకాదశి  \n14  అశ్విని కార్తె  \n14  అనంగ త్రయోదశి  \n14  ప్రదోష వ్రతం  \n14  మేష సంక్రమణం  \n14  మహావీర్ జయంతి  \n14  పస్కా పండుగ  \n14  అంబెడ్కర్ జయంతి  \n15  గుడ్ ఫ్రైడే  \n16  హనుమజ్జయంతి  \n16  చైత్ర పూర్ణమి  \n16  పౌర్ణమి  \n16  పౌర్ణమి వ్రతం  \n16  శ్రీ సత్యనారాయణ పూజ  \n17  ఈస్టర్ సండే  \n17  వసంత నవరాత్రి ప్రారంభం  \n19  సంకటహర చతుర్థి  \n22  ఎర్త్ డే  \n23  షహదత్ హజ్రత్ అలీ  \n26  వరూధినీ ఏకాదశి  \n27  భరణి కార్తె  \n28  షబ్-ఎ-ఖద్ర్ (లైలతుల్ ఖద్ర్)  \n28  ప్రదోష వ్రతం  \n29  జుమతుల్-విదా  \n29  మాస శివరాత్రి  \n30  శ్రీ శ్రీ జయంతి  \n30  అమావాస్య </string>
    <string name="May_2022">01  మే దే  \n02  సోమవారం వృతం  \n02  చంద్రోదయం  \n03  రంజాన్  \n03  అక్షయ తృతీయ  \n03  పరశురామ జయంతి  \n03  సింహాచల చందనోత్సవం  \n03  బసవ జయంతి  \n04  చతుర్థి వ్రతం  \n06  శ్రీ ఆదిశంకరాచార్య జయంతి  \n06  శ్రీరామానుజ జయంతి  \n07  స్కంద షష్టి  \n08  మాతృ దినోత్సవం  \n09  దుర్గాష్టమి వ్రతం  \n11  శ్రీ వాసవి కన్యకాపరమేశ్వరి జయంతి  \n11  కృత్తిక కార్తె  \n11  శ్రీ వీరబ్రహ్మేంద్రస్వామి ఆరాధన  \n12  శ్రీ అన్నవర సత్యదేవుని కళ్యాణంం  \n12  మోహిని ఏకాదశి  \n13  ప్రదోష వ్రతం  \n14  నృసింహ జయంతి  \n15  వృషభ సంక్రాంతి  \n15  శ్రీ కూర్మ జయంతి  \n15  పౌర్ణమి వ్రతం  \n15  శ్రీ సత్యనారాయణ పూజ  \n16  వైశాఖి పూర్ణిమ  \n16  అన్నమయ్య జయంతి  \n16  పౌర్ణమి  \n16  బుద్ధ పూర్ణిమ  \n19  సంకటహర చతుర్థి  \n25  రోహిణి కార్తె  \n26  అపార ఏకాదశి  \n27  ప్రదోష వ్రతం  \n28  మాస శివరాత్రి  \n30  సోమవారం వృతం  \n30  అమావాస్య  \n31  చంద్రోదయం </string>
    <string name="June_2022">02  తెలంగాణా రాష్ట్ర అవతరణ దినోత్సవము  \n03  చతుర్థి వ్రతం  \n05  పర్యావరణ దినోత్సవం  \n05  స్కంద షష్టి  \n06  శీతల షష్టి  \n08  వృషభ వ్రతం  \n08  దుర్గాష్టమి వ్రతం  \n08  మృగశిర కార్తె  \n10  నిర్జల ఏకాదశి  \n10  దశాపాపహర దశమి  \n10  గాయత్రీ జయంతి  \n11  రామలక్ష్మణ ద్వాదశి  \n12  ప్రదోష వ్రతం  \n12  తిరుమల శ్రీవారి జ్యేష్ఠ అభిషేకం ప్రారంభం  \n13  తిరుమల శ్రీవారి జ్యేష్ఠ అభిషేకం సమాప్తి  \n14  వట సావిత్రి పూర్ణిమ  \n14  పౌర్ణమి  \n14  పౌర్ణమి వ్రతం  \n14  శ్రీ సత్యనారాయణ పూజ  \n14  ఏరువాక పౌర్ణమి  \n15  మిధున సంక్రమణం  \n17  సంకటహర చతుర్థి  \n19  ఫాథర్స్ డే  \n22  అరుద్ర కార్తె  \n26  ప్రదోష వ్రతం  \n27  మాస శివరాత్రి  \n29  అమావాస్య  \n30  చంద్రోదయం</string>
    <string name="July_2022">01  కుసుమహరా జయంతి  \n01  పూరీ జగన్నాథ క్షేత్ర రథోత్సవం  \n03  బోనాలు  \n03  సెయింట్ థామస్ డే  \n03  చతుర్థి వ్రతం  \n03  బోనాలు  \n03  బోనాలు ప్రారంభం  \n04  అల్లూరి సీతారామ రాజు జయంతి  \n04  సోమవారం వృతం  \n04  కుమారషష్ఠి  \n04  స్కంద పంచమి  \n05  స్కంద షష్టి  \n06  పునర్వసు కార్తె  \n07  దుర్గాష్టమి వ్రతం  \n10  బక్రీద్  \n10  శయన ఏకాదశి  \n10  చాతుర్మాస్య గోపద్మ వ్రతారంభం  \n10  బోనాలు  \n11  ప్రపంచ జనాభా దినోత్సవం  \n11  ప్రదోష వ్రతం  \n11  సోమా ప్రదోష వ్రతం  \n13  వ్యాస పూజ  \n13  శ్రీ సత్యనారాయణ పూజ  \n13  పౌర్ణమి వ్రతం  \n13  పౌర్ణమి  \n13  గురు పూర్ణిమ  \n14  చాతుర్మాస ద్వితీయ అశూన్య శయన వ్రతం  \n16  సంకటహర చతుర్థి  \n16  కర్కాటక సంక్రమణం  \n17  దక్షిణాయనం ప్రారంభం  \n17  బోనాలు  \n18  ఈద్-ఇ-గదీర్  \n20  బుద్ధ అష్టమి  \n21  పుష్యమి కార్తె  \n24  బోనాలు   \n24  కామిక ఏకాదశి  \n25  సోమా ప్రదోష వ్రతం  \n25  ప్రదోష వ్రతం  \n26  మాస శివరాత్రి  \n28  అమావాస్య  \n29  ఆషాడ గుప్త నవరాత్రి  \n30  ఇస్లామీయ సంవత్సరాది  \n30  చంద్రోదయం </string>
    <string name="August_2022">01  సోమవారం వృతం  \n01  చతుర్థి వ్రతం  \n02  నాగ పంచమి  \n02  గరుడ పంచమి  \n03  స్కంద షష్టి  \n03  కల్కి జయంతి  \n04  ఆశ్లేష కార్తె  \n05  దుర్గాష్టమి వ్రతం  \n07  స్నేహితుల దినోత్సవం  \n07  తిరుమల శ్రీవారి పవిత్రోత్సవ ప్రారంభం  \n08  ఆషూరా దినం (మొహర్రం)  \n08  శ్రావణ పుత్రద ఏకాదశి  \n09  ప్రదోష వ్రతం  \n10  తిరుమల శ్రీవారి తెప్పోత్సవం సమాప్తి  \n11  రాఖీ  \n11  పౌర్ణమి వ్రతం  \n11  శ్రీ సత్యనారాయణ పూజ  \n12  శ్రావణ పూర్ణిమ  \n12  జంధ్యాల పూర్ణిమ  \n12  వైఖానస హయగ్రీవ జయంతి  \n12  పౌర్ణమి  \n12  వరలక్ష్మి వ్రతం  \n15  భారత స్వాతంత్య్ర దినోత్సవం  \n15  సంకటహర చతుర్థి  \n16  రక్షా పంచమి  \n17  బలరామ జయంతి  \n17  సింహ సంక్రమణం  \n18  శ్రీకృష్ణాష్టమి  \n18  మఖ కార్తె  \n19  ప్రపంచ ఛాయాచిత్ర దినోత్సవం  \n24  ప్రదోష వ్రతం  \n25  మాస శివరాత్రి  \n27  అమావాస్య  \n27  పొలాల అమావాస్య  \n28  ముహర్రం ముగుస్తుంది  \n28  చంద్రోదయం  \n29  సోమవారం వృతం  \n30  వరాహ జయంతి  \n30  పుబ్బ కార్తె  \n30  సమవేదం ఉపకారమా  \n31  వినాయక చవితి  \n31  చతుర్థి వ్రతం </string>
    <string name="September_2022">01  ఋషి పంచమి  \n02  స్కంద షష్టి  \n03  మహాలక్ష్మి వ్రతం  \n04  రాధాష్టమి  \n04  దుర్గాష్టమి వ్రతం  \n05  గురు పూజోత్సవం  \n06  పార్శ్వ ఏకాదశి  \n07  వైష్ణవ పార్శ్వ ఏకాదశి  \n07  వామన జయంతి  \n08  ప్రదోష వ్రతం  \n08  ఓనం  \n09  గణేష్ నిమజ్జనం  \n09  అనంత పద్మనాభ వ్రతం  \n10  పౌర్ణమి  \n10  పౌర్ణమి వ్రతం  \n10  శ్రీ సత్యనారాయణ పూజ  \n10  మహాలయ పక్ష ప్రారంభం  \n13  సంకటహర చతుర్థి  \n13  అంగరకి సంకష్టి చతుర్థి  \n13  ఉత్తర కార్తె  \n14  మహాభరణి  \n17  అర్బయిన్  \n17  విశ్వకర్మ జయంతి  \n17  మహాలక్ష్మి వ్రతం సమాప్తి  \n17  కన్య సంక్రాంతి  \n18  మధ్య అష్టమి  \n21  ఇందిర ఏకాదశి  \n22  యతి మహాలయ  \n23  ప్రదోష వ్రతం  \n23  మాఘ స్మారక  \n24  మాస శివరాత్రి  \n25  బతుకమ్మ ప్రారంభం  \n25  మహాలయ అమావాస్య  \n25  అమావాస్య  \n26  దేవి శరన్నవరాత్రి ప్రారంభం  \n26  సోమవారం వృతం  \n27  ప్రపంచ పర్యాటక దినోత్సవం  \n27  చంద్రోదయం  \n28  హస్త కార్తె  \n29  చతుర్థి వ్రతం  \n30  లలితా పంచమి </string>
    <string name="October_2022">01  స్కంద షష్టి  \n02  లాల్ బహదూర్ శాస్త్రి జయంతి  \n02  సరస్వతి పూజ ప్రారంభం  \n02  దుర్గ పూజ  \n02  గాంధీ జయంతి  \n03  దుర్గాష్టమి  \n03  సరస్వతి పూజ  \n03  దుర్గాష్టమి వ్రతం  \n03  సద్దుల బతుకమ్మ పండుగ  \n04  సరస్వతి పూజ  \n04  ప్రపంచ వన్యప్రాణి దినోత్సవం  \n04  మహర్నవమి  \n05  విజయ దశమి  \n06  పాశాంకుశ ఏకాదశి  \n07  ప్రదోష వ్రతం  \n08  మిలాద్ ఉన్ నబి  \n09  పౌర్ణమి  \n09  పౌర్ణమి వ్రతం  \n09  శ్రీ సత్యనారాయణ పూజ  \n09  వాల్మీకి జయంతి  \n10  చిత్త కార్తె  \n12  ఉండ్రాళ్ళ తద్దె  \n13  కార్వా చౌత్  \n13  సంకటహర చతుర్థి  \n17  తులా సంక్రమణం  \n18  తులా కావేరి స్నానం  \n21  రమ ఏకాదశి  \n23  దంతేరాస్  \n23  ప్రదోష వ్రతం  \n23  మాస శివరాత్రి  \n23  ధనత్రయోదశి  \n23  ధన్వంతరీ జయంతి  \n24  స్వాతి కార్తె  \n24  కేదార గౌరీ వ్రతం  \n24  దీపావళి  \n24  నరక చతుర్ధశి  \n25  అమావాస్య  \n26  చంద్రోదయం  \n26  ఆకాశ దీప ప్రారంభం  \n27  భగినీహస్త భోజనం  \n27  యమ ద్వితీయ  \n28  చతుర్థి వ్రతం  \n28  నాగుల చవితి  \n30  సూర్య షష్టి  \n30  స్కంద షష్టి  \n31  సోమవారం వృతం </string>
    <string name="November_2022">01  గోపాష్టమి  \n01  దుర్గాష్టమి వ్రతం  \n04  ప్రబోధిని ఏకాదశి  \n04  కార్తీక శుద్ధ ఏకాదశి  \n04 చాతుర్మాస్య వ్రాత సమాప్తి  \n04  కైశిక ద్వాదశి  \n04  క్షీరాబ్ది ద్వాదశి  \n05  తులసి వివాహం  \n05  ప్రదోష వ్రతం  \n05  శనిత్రయోదశి  \n06  విశ్వేశ్వర వ్రతం  \n06  విశాఖ కార్తె  \n08  కార్తీక పౌర్ణమి  \n08  పౌర్ణమి  \n08  పౌర్ణమి వ్రతం  \n08  ఉమామహేశ్వర వ్రతం  \n08  శ్రీ సత్యనారాయణ పూజ  \n08  గురునానక్ జయంతి  \n08  జ్వాలా తోరణం  \n11  సౌభాగ్య సుందరి తీజ్  \n12  సంకటహర చతుర్థి  \n14  బాలల దినోత్సవం  \n04  జవహర్ లాల్ నెహ్రూ జయంతి  \n16  వృశ్చిక సంక్రమణం  \n16  బుద్ధ అష్టమి  \n17  మండల కలం ఆరంభం  \n20  ఉత్పన్న ఏకాదశి  \n20  అనురాధ కార్తె  \n21  ప్రదోష వ్రతం  \n21  సోమా ప్రదోష వ్రతం  \n22  మాస శివరాత్రి  \n23  శ్రీ సత్యసాయిబాబా జయంతి  \n23  అమావాస్య  \n24  గోవర్ధన పూజ  \n25  చంద్రోదయం  \n27  చతుర్థి వ్రతం  \n28  సోమవారం వృతం  \n28  సుబ్రహ్మణ్య షష్ఠి  \n29  స్కంద షష్టి  \n30  బుద్ధ అష్టమి </string>
    <string name="December_2022">01  ఎయిడ్స్ డే  \n01  దుర్గాష్టమి వ్రతం  \n03  మోక్షద ఏకాదశి  \n03  గీతా జయంతి  \n03  జ్యేష్ఠ కార్తె  \n04  వైష్ణవ మోక్షద ఏకాదశి  \n05  ప్రదోష వ్రతం  \n05  సోమా ప్రదోష వ్రతం   \n05  హనుమద్ర్వతం  \n07  దత్త జయంతి  \n07  పౌర్ణమి వ్రతం  \n07  శ్రీ సత్యనారాయణ పూజ  \n08  పౌర్ణమి  \n11  సంకటహర చతుర్థి  \n16  మూల కార్తె   \n16  ధనుర్మాస పూజ  \n16  బాలాజీ జయంతి  \n16  ధనుస్సంక్రమణం  \n19  సఫల ఏకాదశి  \n21  ప్రదోష వ్రతం  \n21  మాస శివరాత్రి  \n23  అమావాస్య  \n24  క్రిస్టమస్ ఈవ్  \n24  చంద్రోదయం  \n25  క్రిస్టమస్  \n26  బాక్సింగ్ డే  \n26  సోమవారం వృతం  \n26  చతుర్థి వ్రతం  \n27  మండల పూజ  \n28  స్కంద షష్టి  \n29  పూర్వాషాఢ కార్తె  \n30  దుర్గాష్టమి వ్రతం </string>
    <string name="sakuna_sasthram">10.Sakuna Sasthram</string>
    <string name="sakunalu">Sakunalu</string>
    <string name="balli_sasthram">Balli Sasthram</string>
    <string name="kaki_sasthram">Kaki Sasthram</string>
    <string name="kukuta_sasthram">Kukuta Sasthram</string>
    <string name="pilli_sasthram">Pilli Sasthram</string>
    <string name="sakuna_sasthram_title">Sakuna Sasthram</string>
    <string name="Telungu_samskrutham">11.Telugu Samskrutham</string>
    <string name="aadhi_parvam">1. Adhi Parvam ( 26 )</string>
    <string name="anusanika_parvam">2. Anusanika Parvam ( 14 )</string>
    <string name="maha_sthanika_parvam">3. Maha Sthanika Parvam ( 19 )</string>
    <string name="maha_puranalu">12.Maha Puranalu</string>
</resources>