<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/group1"

        >


        <item
            android:id="@+id/panchangam"
            android:title="1.panchangam" />

        <item
            android:id="@+id/festivals"
            android:title="2.Festivals" />


        <item
            android:id="@+id/muhurtham"
            android:title="3.Muhurthamulu" />


        <item
            android:id="@+id/horoscope"
            android:title="4.Horoscope" />


        <item
            android:id="@+id/poojalu"
            android:title="5.Poojalu" />


        <item
            android:id="@+id/grahalu"
            android:title="6.Grahalu" />

        <item
            android:id="@+id/bakyhigeethalu"
            android:title="7.Bakthi Geethalu" />

        <item
            android:id="@+id/bakthini"
            android:title="8.Bakthini Chatudham"

            />

        <item
            android:id="@+id/panchangamlist"
            android:title="9.Panchangam List"

            />
        <item
            android:id="@+id/sakunasasthram"
            android:title="@string/sakuna_sasthram" />

        <item
            android:id="@+id/teluguSamskurtham"
            android:title="@string/Telungu_samskrutham" />
        <item
            android:id="@+id/mahapuranalu"
            android:title="@string/maha_puranalu" />


        <item
            android:id="@+id/bhakthiArticles"
            android:title="13.Bhakthi Articles/News" />



    </group>




    <group
        android:id="@+id/group2"

        >

        <item
            android:id="@+id/Smarttools"
            android:title="Smart Tools" />
    </group>



    <group
        android:id="@+id/group3"
        >




    <item
        android:id="@+id/feedback"
        android:title="Feedback" />

    <item
        android:id="@+id/Rateus"
        android:title="Rate Us" />


    <item
        android:id="@+id/share"
        android:title="Share This App"

        />

    <item android:title="Remove Ads" />

    <item
        android:id="@+id/PrivacyPolicy"
        android:title="Privacy Policy" />


    </group>

</menu>