<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    tools:context=".activities.MahaBharathamActivity">

    <LinearLayout
        android:id="@+id/llout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHead"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/sakuna_sasthram_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fr_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llout"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/corner_bg"
        android:backgroundTint="@color/colorWhite">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_bg"
            android:backgroundTint="#F4F2F2"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="About Maha Bharatham"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adhi_parvam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/reusetxt"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/aadhi_parvam"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/anusanika_parvam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adhi_parvam"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/reusetxt"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/anusanika_parvam"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/anusanika_parvam"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/reusetxt"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/maha_sthanika_parvam"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>