<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F3F3"
    tools:context=".fragments.SakunaSasthramFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/sakuna_sasthram_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:weightSum="3"

            >

            <LinearLayout
                android:id="@+id/sakunalu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bar">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/sakunalu"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/balli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"

                >

                <RelativeLayout
                    android:layout_width="@dimen/_60sdp"

                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bar">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/balli_sasthram"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/kaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"

                >

                <RelativeLayout
                    android:layout_width="@dimen/_60sdp"

                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bar">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/kaki_sasthram"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:weightSum="3">


            <LinearLayout
                android:id="@+id/kukuta_sasthram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"

                >

                <RelativeLayout
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bar"

                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/kukuta_sasthram"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pilli_sasthram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"

                >

                <RelativeLayout
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bar">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/pilli_sasthram"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>